[project]
name = "python-utils"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marc Fabian Mezger", email = "57255687+mfmezger@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.39.1",
    "loguru>=0.7.3",
    "pydantic-ai>=1.0.11",
    "pymupdf>=1.26.4",
    "pymupdf4llm>=0.0.27",
    "tqdm>=4.67.1",
]

[project.scripts]
python-utils = "python_utils:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
